<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout"
        android:background="#ff1840dd"
        android:layout_marginBottom="10dp" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/agregari"
            android:id="@+id/tvTitulo"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textColor="#fffffdf9"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#ff28c1dd" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/relativeLayout" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingRight="10dp"
            android:paddingLeft="10dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerM"
                android:layout_gravity="center_horizontal"
                android:prompt="@string/app_name"
                android:entries="@array/Tipo"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:theme="@style/AppTheme" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/localidad"
                android:id="@+id/tvFoto"
                android:padding="10dp"
                android:layout_below="@+id/spinnerM"
                android:textColor="#ff000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/direccion"
                android:id="@+id/tvSeguro"
                android:layout_alignLeft="@+id/tvDireccionE"
                android:padding="10dp"
                android:layout_below="@+id/tvFoto"
                android:textColor="#ff000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/precio"
                android:id="@+id/tvDireccionE"
                android:padding="10dp"
                android:layout_below="@+id/tvSeguro"
                android:textColor="#ff000000" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLocalidad"
                android:layout_toEndOf="@+id/tvDireccionE"
                android:layout_toRightOf="@+id/tvFoto"
                android:layout_below="@+id/spinnerM"
                android:gravity="bottom|center_horizontal"
                android:padding="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDireccion"
                android:layout_toEndOf="@+id/tvDireccionE"
                android:layout_below="@+id/etLocalidad"
                android:layout_toRightOf="@+id/tvFoto"
                android:gravity="bottom|center_horizontal"
                android:padding="10dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etPrecio"
                android:layout_toRightOf="@+id/tvDireccionE"
                android:layout_below="@+id/etDireccion"
                android:layout_alignLeft="@+id/etDireccion"
                android:inputType="numberDecimal"
                android:layout_alignRight="@+id/linearLayout"
                android:gravity="bottom|center_horizontal"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/moneda"
                android:id="@+id/tvMoneda"
                android:textColor="#ff000000"
                android:layout_alignBaseline="@+id/etPrecio"
                android:layout_below="@+id/etDireccion"
                android:layout_alignParentRight="true"
                android:layout_toLeftOf="@+id/etPrecio"
                android:paddingRight="10dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="3dp"
                android:id="@+id/linearLayout"
                android:layout_below="@+id/etPrecio">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:id="@+id/button"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:onClick="cancelar"
                    android:background="#ff28c1dd"
                    android:textColor="#ffffffff" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agregar"
                    android:id="@+id/bOK"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:onClick="aceptar"
                    android:background="#ff28c1dd"
                    android:textColor="#ffffffff" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
