<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aaron.provhibernate.Eliminar">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout"
                android:layout_marginBottom="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/eliminari"
                    android:id="@+id/tvFoto"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:textColor="#fffffdf9"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="#ff28c1dd" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/mensajeSeguro"
                android:id="@+id/textView"
                android:textColor="#ff000000"
                android:layout_below="@+id/relativeLayout"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="20dp"
                android:layout_alignParentLeft="true" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/ivTipo"
                android:src="@drawable/ic_launcher"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_margin="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvLocalidadE"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:layout_alignTop="@+id/ivTipo"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_toRightOf="@+id/ivTipo"
                android:paddingLeft="10dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tvDireccionE"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:layout_toRightOf="@+id/ivTipo"
                android:layout_below="@+id/tvLocalidadE"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvPrecioE"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:layout_below="@+id/tvDireccionE"
                android:paddingTop="15dp"
                android:layout_toRightOf="@+id/ivTipo"
                android:gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"
                android:layout_below="@+id/ivTipo"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_margin="3dp"
                android:id="@+id/linearLayout" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancelar"
                    android:id="@+id/button"
                    android:layout_weight="1"
                    android:background="#ff28c1dd"
                    android:layout_margin="5dp"
                    android:textColor="#fffffffb"
                    android:onClick="cancelar" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/eliminar"
                    android:id="@+id/button2"
                    android:layout_weight="1"
                    android:background="#ff28c1dd"
                    android:layout_margin="5dp"
                    android:textColor="#fffffffb"
                    android:onClick="aceptar" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>